--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
     </div>
     <div class="description">
-        <span>TEN TUS FLORES AMARILLAS VIRTUALES... <br>TE AMOOO!!</span>
+        <span>TEN TUS FLORES AMARILLAS VIRTUALES...TE AMOOO!!</span>
     </div>
     <div class="button">
         <button>
