--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 <body>
     <div class="greetings">
 
-        <span>P</span>
-        <span>A</span>
-        <span>R</span>
-        <span>A</span>
+        <span>S</span>
+        <span>E</span>
+        <span></span>
+        <span></span>
 
     </div>
     <div class="greetings">
-        <span>TI</span>
-        <span>MI</span>
         <span>A</span>
-        <span>M</span>
-        <span>O</span>
-        <span>R</span>
-        <span>LALI</span>
+        <span>C</span>
+        <span>A</span>
+        <span>B</span>
+        <span>Ó</span>
+        <span></span>
+        <span></span>
 
         
     </div>
     <div class="description">
-        <span>TEN TUS FLORES AMARILLAS VIRTUALES...TE AMOOO!!</span>
+        <span>...</span>
     </div>
     <div class="button">
         <button>
-            <a href="FLORES.html">CLICK AQUÍ MI NIÑA LALI</a>
+            <a href="FLORES.html">CLICK</a>
         </button>
         
     </div>
