--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="flowers.png" type="image/x-icon">
-    <title>...</title>
+    <title>FLORES</title>
 </head>
 <body>
     <div class="greetings">
 
-        <span>S</span>
-        <span>E</span>
-        <span></span>
-        <span></span>
+        <span>P</span>
+        <span>A</span>
+        <span>R</span>
+        <span>A</span>
 
     </div>
     <div class="greetings">
+        <span>TI</span>
+        <span>MI</span>
         <span>A</span>
-        <span>C</span>
-        <span>A</span>
-        <span>B</span>
-        <span>Ó</span>
-        <span></span>
-        <span></span>
+        <span>M</span>
+        <span>O</span>
+        <span>R</span>
+        <span>LALI</span>
 
         
     </div>
     <div class="description">
-        <span>...</span>
+        <span>TE AMOOO!!</span>
     </div>
     <div class="button">
         <button>
-            <a href="FLORES.html">CLICK</a>
+            <a href="FLORES.html">CLICK AQUÍ NIÑAAA</a>
         </button>
         
     </div>
