--- a/FLORESSS.html
+++ b/FLORESSS.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" href="img/flowers.png" type="image/x-icon" />
-    <title>Mi cumple ELI</title>
+    <title>Niña Hermosa</title>
   </head>
   <body class="container">
     <audio src="sound/ChristianBasso&HaienQiu-Flowers.mp3" autoplay></audio>
